Fixed the ListView ListCell Selection Visibility

--- a/src/application/application.css
+++ b/src/application/application.css
@@ -86,6 +86,7 @@
 
 .list-cell {
 	-fx-background-color: transparent;
+	-fx-text-fill: #555555;
 }
 
 .list-cell Label {
@@ -319,4 +320,34 @@
 .btn-rich-blue:hover {
 	-fx-background-color: linear-gradient(#2A5058, #5077bf);
 	-fx-cursor: hand;
+}
+
+.pm-projects .list-view .list-cell:filled:selected {
+    -fx-background: #2A5058;
+    -fx-background-color: #5097bf;
+    -fx-text-fill: -fx-selection-bar-text;
+    -fx-cursor: hand;
+}
+
+.pm-projects .list-view .combo-box .list-cell {
+	-fx-background: #ffffff;
+    -fx-background-color: #ffffff;
+    -fx-text-fill: #333333;
+    -fx-padding: 3 0 2 5;
+    -fx-cell-size: 1.66667em;
+}
+
+.pm-projects .list-view .list-cell:filled:selected {
+    -fx-background: #2A5058;
+    -fx-background-color: #5097bf;
+    -fx-text-fill: -fx-selection-bar-text;
+    -fx-cursor: hand;
+}
+
+.pm-projects .list-view .combo-box .list-cell {
+	-fx-background: #ffffff;
+    -fx-background-color: #ffffff;
+    -fx-text-fill: #333333;
+    -fx-padding: 3 0 2 5;
+    -fx-cell-size: 1.66667em;
 }
